--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "father-christmas-bot",
   "version": "1.0.0",
   "description": "Oficial Father Christmas bot for congratulations",
-  "main": "app.js",
+  "main": "main.js",
   "scripts": {
-    "start:prod": "node app.js",
-    "start:dev": "nodemon app.js"
+    "start:prod": "node main.js",
+    "start:dev": "nodemon main.js"
   },
   "author": "Nikita",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
-    "nodemon": "^3.0.2",
     "path": "^0.12.7",
     "telegraf": "^4.15.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
