--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "father-christmas-bot",
   "version": "1.0.0",
   "description": "Oficial Father Christmas bot for congratulations",
-  "main": "main.js",
+  "author": "nikitaSstepanov",
   "scripts": {
-    "start:prod": "node main.js",
-    "start:dev": "nodemon main.js"
+    "build": "npx tsc src/main.ts --outDir ./dist",
+    "start": "npx tsc src/main.ts --outDir ./dist && node ./dist/src/main.js"
   },
-  "author": "Nikita",
-  "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
@@ -16,6 +14,7 @@
     "telegraf": "^4.15.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@types/node": "^22.10.2",
+    "typescript": "^5.7.2"
   }
 }
